[project]
name = "rns-flet-app"
version = "0.1.0"
description = "A template for creating RNS Flet applications"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet[all] (>=0.28.3,<0.29.0)",
    "rns (>=1.0.2,<1.5.0)",
    "lxmf (>=0.9.2,<1.1.0)",
    "lxst (>=0.4.0,<0.8.0)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rns_flet_app"]

[project.scripts]
rns-flet-app = "rns_flet_app.app:run"
rns-flet-app-web = "rns_flet_app.app:web"
rns-flet-app-android = "rns_flet_app.app:android"
rns-flet-app-ios = "rns_flet_app.app:ios"

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"
